--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
     --color-icons: #2A7AE4;
     --cor-texto-principal: #464646;
     --cor-bg: #FFFFFF;
-    --cor-destaque: #B662D3;
+    --cor-destaque: #AD88C6;
     --cor-cards: #F5F5F5;
     --cor-bg-sections: #EFE5E5;
     --cor-field-error: #d93025;
@@ -53,7 +53,13 @@ button {
     cursor: pointer;
 }
 
+body.dark-mode {
+    background-color: black;
+    color: white;
+}
+
 .header {
+    background-color: var(--background-color);
     position: fixed;
     width: 100%;
     padding: 2rem 5%;
@@ -61,15 +67,6 @@ button {
     justify-content: space-between;
     align-items: center;
     z-index: 100;
-}
-
-.header::before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: var(--cor-bg);
-    z-index: -1;
 }
 
 .navbar a {
@@ -146,7 +143,6 @@ button {
     height: 40px;
     font-size: 20px;
     margin: 20px 0;
-    z-index: 1;
 }
 
 .home-sci a::before, .home-sci a::after {
